--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="5px">
     <tbody>
       <tr>
-        <td><img src="F:\WebDevelopment\HTML basic\Images\Vaibhav.png" alt="Vaibhav twitter profile picture"></td>
+        <td><img src="Vaibhav.png" alt="Vaibhav twitter profile picture"></td>
         <td>
           <h1>Vaibhav Pathak</h1>
           <p>
